syntax = "proto3";

package calculatorguide;

service CalculatorService {
    rpc OperationService(Operation) returns (OperationResponse) {}
}

message Operation {
    int32 number1 = 1;
    int32 number2 = 2;
    string operation = 3;
}

message OperationResponse {
    int32 result = 1;
}